fix: adjust horizontal scroll

--- a/src/components/BasicComponents/ErrorFallback.module.css
+++ b/src/components/BasicComponents/ErrorFallback.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(
     145deg,
